src/styles.scss
@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Titan+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&display=swap');


/* You can add global styles to this file, and also import other style files */
$textDark: #797b84;
$textLight: #c9c9c9;
$footerBottom: #564146;
$footerTop: #bea5ab;
$mainBackground: #c5dbd5;

* {
    color: $textDark;
}

body {
    background-color: $mainBackground;
    font-family: "IBM Plex Sans", sans-serif;
    font-weight: 400;
    font-style: normal;
}

.mainBackground {
    background-color: $mainBackground;
}

.footerTop {
    background-color: $footerTop;
    padding-bottom: 0;
    padding-top: 60px;
}

.footerBottom {
    padding: 0;
    background-color: $footerBottom;
    height: 200px;
}

.social {
    color: $textLight;
    font-size: 30px;
    margin: 0 5px;
    margin-bottom: 40px;
}

.companyFirstName {
  color: $footerBottom;
  font-family: "Titan One", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.companySecondName {
  color: $footerTop;
  font-family: "Pacifico", cursive;
  font-weight: 400;
  font-style: normal;
}

